--- a/app/src/main/res/menu/app_icons.xml
+++ b/app/src/main/res/menu/app_icons.xml
@@ -6,7 +6,8 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Item"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
     <item
         android:id="@+id/order"
 
