--- a/app/src/main/res/menu/app_icons.xml
+++ b/app/src/main/res/menu/app_icons.xml
@@ -13,7 +13,8 @@
 
         android:icon="@drawable/ic_baseline_filter_list_24"
         android:title="Item"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.MenuPopupWindow$MenuDropDownListView" />
     <item
         android:id="@+id/delete"
         android:icon="@drawable/ic_baseline_delete_forever_24"
