--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -32,7 +32,8 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="20-11-2021" />
+            android:text="20-11-2021"
+            android:visibility="gone" />
 
     </LinearLayout>
 
