--- a/app/src/main/res/layout/itme_task.xml
+++ b/app/src/main/res/layout/itme_task.xml
@@ -6,16 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
 
-    android:padding="8dp">
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="1dp"
-        app:cardCornerRadius="10dp">
+        android:layout_marginTop=".4dp"
+        android:layout_marginBottom=".4dp"
+        app:cardCornerRadius="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
