--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/tasksFragment">
+    app:startDestination="@id/splash">
 
     <fragment
         android:id="@+id/tasksFragment"
-        android:name="com.example.todoff.ui.TasksFragment"
+        android:name="com.basem.todoff.ui.TasksFragment"
         android:label="tasks_fragment"
-        tools:layout="@layout/tasks_fragment" >
+        tools:layout="@layout/tasks_fragment">
         <action
             android:id="@+id/action_tasksFragment_to_addFragment"
             app:destination="@id/addFragment"
@@ -18,15 +18,26 @@
     </fragment>
     <fragment
         android:id="@+id/addFragment"
-        android:name="com.example.todoff.ui.AddFragment"
+        android:name="com.basem.todoff.ui.AddFragment"
         android:label="add_fragment"
-        tools:layout="@layout/add_fragment" >
+        tools:layout="@layout/add_fragment">
         <action
             android:id="@+id/action_addFragment_to_tasksFragment"
             app:destination="@id/tasksFragment"
             app:launchSingleTop="true"
             app:popUpTo="@+id/nav_graph"
-            app:popUpToInclusive="true"
-            />
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/splash"
+        android:name="com.basem.todoff.ui.Splash"
+        android:label="splash"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splash_to_tasksFragment"
+            app:destination="@id/tasksFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
