--- a/app/src/main/res/menu/app_icons.xml
+++ b/app/src/main/res/menu/app_icons.xml
@@ -13,4 +13,5 @@
         android:icon="@drawable/ic_baseline_delete_forever_24"
         android:title="Item"
         app:showAsAction="always" />
+    <item android:title="@string/settings" />
 </menu>
