--- a/app/src/main/res/layout/itme_task.xml
+++ b/app/src/main/res/layout/itme_task.xml
@@ -46,10 +46,10 @@
 
             <CheckBox
                 android:id="@+id/checkItem"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="20"
+                android:clickable="false"
                 android:gravity="center" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
