--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/addlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".ui.AddFragment"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:context=".ui.AddFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical">
+
         <EditText
             android:id="@+id/item_ET"
             android:layout_width="match_parent"
@@ -20,6 +22,7 @@
             android:ems="10"
             android:hint="add a new task"
             android:inputType="text" />
+
         <CheckBox
             android:id="@+id/AddCheckbox"
             android:layout_width="match_parent"
